Rectify SonarQube Issues
SonarQube identified some small issues within the code. This commit rectifies these issues.
- Remove unnecessary unboxing for financialAssessmentId in EvidenceOrchestrationService
- Replace Collectors.toList() with Stream.toList() in TestModelDataBuilder as this prevents list from being modified.
- Rename variable from ContributionSummaryDTOs to contributionSummaryDTOs in ContributionMapperTest to follow java naming standards.